--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
 		"dompdf/dompdf": "dev-master",
 		"filp/whoops": "1.*",
 		"fxp/composer-asset-plugin": "~1.0",
-		"bower-asset/bootstrap": "dev-master",
 		"bower-asset/font-awesome": "*",
 		"bower-asset/moment": "2.10.*",
 		"bower-asset/tigron-datetimepicker": "0.*",
 		"bower-asset/tigron-confirm-modal": "0.*",
 		"bower-asset/dropzone": "~4.0",
-		"bower-asset/textarea-autosize": "0.*",
+		"bower-asset/autogrow-textarea": "dev-master",
 		"bower-asset/jquery-zoom": "dev-master",
 		"bower-asset/handlebars": "4.0.2",
 		"bower-asset/bootstrap-multiselect": "dev-master",
 		"bower-asset/jquery-ui": "*",
 		"bower-asset/bootstrap-checkbox": "*",
+		"bower-asset/bootstrap": "3.3.5",
         "phpdocumentor/reflection-docblock": "^3.0",
 		"ext-imap": "*"
     },
