Include SetaSign PDF Extractor to extract content from PDF documents

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ tmp/picture/*
 store/file/*
 store/documentation/*
 lib/external/*
+lib/component/*
 composer.lock
 util/tmp/*
 migrations/db_version
