Use stable packages - Change package dependencies from dev-master to stable versions

--- a/composer.json
+++ b/composer.json
@@ -34,23 +34,23 @@
         "bower-asset/highcharts": "^4.2"
     },
     "require-dev": {
-        "tigron/skeleton-database": "dev-master",
-        "tigron/skeleton-object": "dev-master",
-        "tigron/skeleton-file": "dev-master",
-        "tigron/skeleton-file-picture": "dev-master",
-        "tigron/skeleton-file-pdf": "dev-master",
-        "tigron/skeleton-i18n": "dev-master",
-        "tigron/skeleton-pager": "dev-master",
-        "tigron/skeleton-template-twig": "dev-master",
-        "tigron/skeleton-core": "dev-master",
-        "tigron/skeleton-error": "dev-master",
-        "tigron/skeleton-template": "dev-master",
-        "tigron/skeleton-email": "dev-master",
-		"tigron/skeleton-console": "dev-master",
-        "tigron/skeleton-migrate": "dev-master",
-        "tigron/skeleton-transaction": "dev-master",
-        "tigron/skeleton-package-api": "dev-master",
-        "tigron/skeleton-package-crud": "dev-master"
+        "tigron/skeleton-database": "0.1.0",
+        "tigron/skeleton-object": "0.1.0",
+        "tigron/skeleton-file": "0.2.0",
+        "tigron/skeleton-file-picture": "0.1.0",
+        "tigron/skeleton-file-pdf": "0.2.0",
+        "tigron/skeleton-i18n": "0.0.4",
+        "tigron/skeleton-pager": "0.1.0",
+        "tigron/skeleton-template-twig": "0.1.0",
+        "tigron/skeleton-core": "0.1.0",
+        "tigron/skeleton-error": "0.1.0",
+        "tigron/skeleton-template": "0.1.0",
+        "tigron/skeleton-email": "0.1.0",
+		"tigron/skeleton-console": "0.1.0",
+        "tigron/skeleton-migrate": "0.1.1",
+        "tigron/skeleton-transaction": "0.1.0",
+        "tigron/skeleton-package-api": "0.1.0",
+        "tigron/skeleton-package-crud": "0.1.0"
     },
     "suggest": {
         "ext-imap": "*"
