--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "tigron/skeleton-migrate": "0.1.2",
         "tigron/skeleton-transaction": "0.1.0",
         "tigron/skeleton-package-api": "0.1.0",
-        "tigron/skeleton-package-crud": "0.1.0"
+        "tigron/skeleton-package-crud": "0.1.0",
+        "tigron/click-post": "0.0.3"
     },
     "suggest": {
         "ext-imap": "*"
