--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "tigron/skeleton-i18n": "0.0.4",
         "tigron/skeleton-pager": "0.1.4",
         "tigron/skeleton-template-twig": "0.1.1",
-        "tigron/skeleton-core": "0.1.2",
+        "tigron/skeleton-core": "^0.1",
         "tigron/skeleton-error": "0.1.0",
         "tigron/skeleton-template": "0.1.0",
         "tigron/skeleton-email": "0.1.0",
