link transactions to incoming invoices

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"bower-asset/bootstrap": "3.3.5",
 		"bower-asset/jquery-mask-plugin": "@stable",
 		"bower-asset/codemirror": "@stable",
-		"bower-asset/purl": "@stable",
+		"bower-asset/urijs": "@stable",
         "phpdocumentor/reflection-docblock": "^3.0",
         "phpoffice/phpexcel": "~1.8",
 		"ext-imap": "*",
@@ -51,7 +51,7 @@
 		"tigron/skeleton-console": "0.1.0",
         "tigron/skeleton-migrate": "0.1.2",
         "tigron/skeleton-transaction": "0.1.0",
-        "tigron/skeleton-package-api": "0.1.0",
+        "tigron/skeleton-package-api": "dev-master",
         "tigron/skeleton-package-crud": "0.1.0",
         "tigron/click-post": "0.0.3"
     },
