new features: - Reminder mails - Reminder lettre (PDF) - update of transaction package (multi-threaded)

--- a/composer.json
+++ b/composer.json
@@ -36,24 +36,24 @@
         "tigron/sepa-payments": "0.0.5"
     },
     "require-dev": {
-        "tigron/skeleton-database": "0.1.0",
-        "tigron/skeleton-object": "0.1.0",
-        "tigron/skeleton-file": "0.2.0",
-        "tigron/skeleton-file-picture": "0.1.0",
-        "tigron/skeleton-file-pdf": "0.2.0",
-        "tigron/skeleton-i18n": "0.0.4",
-        "tigron/skeleton-pager": "0.1.4",
-        "tigron/skeleton-template-twig": "0.1.1",
-        "tigron/skeleton-core": "^0.1",
-        "tigron/skeleton-error": "0.1.0",
-        "tigron/skeleton-template": "0.1.0",
-        "tigron/skeleton-email": "0.1.0",
-		"tigron/skeleton-console": "0.1.0",
-        "tigron/skeleton-migrate": "0.1.2",
-        "tigron/skeleton-transaction": "0.1.0",
-        "tigron/skeleton-package-api": "dev-master",
-        "tigron/skeleton-package-crud": "0.1.0",
-        "tigron/click-post": "0.0.3"
+        "tigron/skeleton-database": "~0",
+        "tigron/skeleton-object": "~0",
+        "tigron/skeleton-file": "~0",
+        "tigron/skeleton-file-picture": "~0",
+        "tigron/skeleton-file-pdf": "~0",
+        "tigron/skeleton-i18n": "~0",
+        "tigron/skeleton-pager": "~0",
+        "tigron/skeleton-template-twig": "~0",
+        "tigron/skeleton-core": "~0",
+        "tigron/skeleton-error": "~0",
+        "tigron/skeleton-template": "~0",
+        "tigron/skeleton-email": "~0",
+		"tigron/skeleton-console": "~0",
+        "tigron/skeleton-migrate": "~0",
+        "tigron/skeleton-transaction": "~0",
+        "tigron/skeleton-package-api": "~0",
+        "tigron/skeleton-package-crud": "~0",
+        "tigron/click-post": "~0"
     },
     "suggest": {
         "ext-imap": "*"
