--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "tigron/skeleton-file-picture": "~0",
         "tigron/skeleton-file-pdf": "~0",
         "tigron/skeleton-i18n": "~0",
-        "tigron/skeleton-pager": "~0",
+        "tigron/skeleton-pager": "dev-master",
         "tigron/skeleton-template-twig": "~0",
         "tigron/skeleton-core": "~0",
         "tigron/skeleton-error": "~0",
