update skeleton-pdf package

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,24 @@
 		"fxp/composer-asset-plugin": "~1.0",
 		"codelicious/php-coda-parser": "^1.0",
 		"jschaedl/iban": "1.1.6",
+        "tigron/skeleton-database": "~0",
+        "tigron/skeleton-object": "~0",
+        "tigron/skeleton-file": "dev-master",
+        "tigron/skeleton-file-picture": "~0",
+        "tigron/skeleton-file-pdf": "~0",
+        "tigron/skeleton-i18n": "~0",
+        "tigron/skeleton-pager": "dev-master",
+        "tigron/skeleton-template-twig": "~0",
+        "tigron/skeleton-core": "~0",
+        "tigron/skeleton-error": "~0",
+        "tigron/skeleton-template": "~0",
+        "tigron/skeleton-email": "~0",
+		"tigron/skeleton-console": "~0",
+        "tigron/skeleton-migrate": "~0",
+        "tigron/skeleton-package-api": "~0",
+        "tigron/skeleton-package-crud": "~0",
+        "tigron/click-post": "~0",
 		"bower-asset/jquery": "~1.8",
-		"bower-asset/font-awesome": "*",
 		"bower-asset/moment": "2.10.*",
 		"bower-asset/tigron-datetimepicker": "0.*",
 		"bower-asset/eonasdan-bootstrap-datetimepicker": "dev-master",
@@ -36,26 +52,8 @@
         "tigron/sepa-payments": "0.0.5",
         "phpseclib/phpseclib": "^2.0",
         "ddeboer/imap": "^0.5.2",
-        "tigron/skeleton-transaction": "^0.2.6"
-    },
-    "require-dev": {
-        "tigron/skeleton-database": "~0",
-        "tigron/skeleton-object": "~0",
-        "tigron/skeleton-file": "dev-master",
-        "tigron/skeleton-file-picture": "~0",
-        "tigron/skeleton-file-pdf": "~0",
-        "tigron/skeleton-i18n": "~0",
-        "tigron/skeleton-pager": "dev-master",
-        "tigron/skeleton-template-twig": "~0",
-        "tigron/skeleton-core": "~0",
-        "tigron/skeleton-error": "~0",
-        "tigron/skeleton-template": "~0",
-        "tigron/skeleton-email": "~0",
-		"tigron/skeleton-console": "~0",
-        "tigron/skeleton-migrate": "~0",
-        "tigron/skeleton-package-api": "~0",
-        "tigron/skeleton-package-crud": "~0",
-        "tigron/click-post": "~0"
+        "tigron/skeleton-transaction": "^0.2.6",
+        "bower-asset/font-awesome": "^4"
     },
     "suggest": {
         "ext-imap": "*"
