--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,9 @@
 		"bower-asset/jquery-mask-plugin": "@stable",
 		"bower-asset/codemirror": "@stable",
 		"bower-asset/urijs": "@stable",
+		"bower-asset/bloodhound": "^1.0",
+		"bower-asset/typeahead.js": "^0.11.1",
+		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
         "phpdocumentor/reflection-docblock": "^3.0",
         "phpoffice/phpexcel": "~1.8",
 		"ext-imap": "*",
