--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "tigron/skeleton-package-api": "~0",
         "tigron/skeleton-package-crud": "~0",
         "tigron/click-post": "~0",
+
 		"bower-asset/jquery": "~1.8",
 		"bower-asset/moment": "2.10.*",
 		"bower-asset/tigron-datetimepicker": "0.*",
@@ -54,15 +55,16 @@
 		"bower-asset/bloodhound": "^1.0",
 		"bower-asset/typeahead.js": "^0.11.1",
 		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
-        "phpdocumentor/reflection-docblock": "^3.0",
-        "phpoffice/phpexcel": "~1.8",
+		"bower-asset/highcharts": "^4.2",
+		"bower-asset/font-awesome": "^4",
+
 		"ext-imap": "*",
-        "bower-asset/highcharts": "^4.2",
+		"phpdocumentor/reflection-docblock": "^3.0",
+        "phpoffice/phpspreadsheet": "~1.4",
         "tigron/sepa-payments": "0.0.5",
         "phpseclib/phpseclib": "^2.0",
         "ddeboer/imap": "^0.5.2",
         "tigron/skeleton-transaction": "^0.2.6",
-        "bower-asset/font-awesome": "^4",
         "tigron/codabox-gateway": "^0.0.1"
     },
     "suggest": {
