--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"tigron/skeleton-error": "~0",
 		"tigron/skeleton-template": "~0",
 		"tigron/skeleton-email": "~0",
-		"tigron/skeleton-console": "~0",
+		"tigron/skeleton-console": "0.1.2",
 		"tigron/skeleton-migrate": "~0",
 		"tigron/skeleton-package-api": "~0",
 		"tigron/skeleton-package-crud": "~0",
@@ -38,7 +38,7 @@
 		"dompdf/dompdf": "dev-master",
 		"filp/whoops": "^2.1",
 		"codelicious/php-coda-parser": "^1.0",
-		"jschaedl/iban-validation": "^1.1",
+		"jschaedl/iban": "^1.3",
 		"ext-imap": "*",
 		"phpdocumentor/reflection-docblock": "^3.0",
 		"phpoffice/phpspreadsheet": "~1.4",
