--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"tigron/skeleton-error": "~0",
 		"tigron/skeleton-template": "~0",
 		"tigron/skeleton-email": "~0",
-		"tigron/skeleton-console": "0.1.2",
+		"tigron/skeleton-console": "~0",
 		"tigron/skeleton-migrate": "~0",
 		"tigron/skeleton-package-api": "~0",
 		"tigron/skeleton-package-crud": "~0",
