--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"tigron/skeleton-i18n": "~0",
 		"tigron/skeleton-pager": "dev-master",
 		"tigron/skeleton-template-twig": "~0",
-		"tigron/skeleton-core": "~0",
+		"tigron/skeleton-core": "dev-master",
 		"tigron/skeleton-error": "~0",
 		"tigron/skeleton-template": "~0",
 		"tigron/skeleton-email": "~0",
@@ -32,6 +32,7 @@
 		"tigron/skeleton-transaction": "^0.2.6",
 		"tigron/codabox-gateway": "^0.0.1",
 		"tigron/sepa-payments": "0.0.5",
+		"tigron/skeleton-package-openapi": "dev-master",
 
 		"fxp/composer-asset-plugin": "~1.0",
 		"swiftmailer/swiftmailer": "5.*",
