--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
 
 		"tigron/skeleton-database": "~0",
 		"tigron/skeleton-object": "~0",
-		"tigron/skeleton-file": "dev-master",
+		"tigron/skeleton-file": "^0",
 		"tigron/skeleton-file-picture": "~0",
 		"tigron/skeleton-file-pdf": "~0",
 		"tigron/skeleton-i18n": "~0",
-		"tigron/skeleton-pager": "dev-master",
+		"tigron/skeleton-pager": "^0",
 		"tigron/skeleton-template-twig": "~0",
-		"tigron/skeleton-core": "dev-master",
+		"tigron/skeleton-core": "^1",
 		"tigron/skeleton-error": "~0",
 		"tigron/skeleton-template": "~0",
 		"tigron/skeleton-email": "~0",
