Add translations for countries

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,8 @@
 		"phpoffice/phpspreadsheet": "~1.4",
 		"phpseclib/phpseclib": "^2.0",
 		"ddeboer/imap": "^0.5.2",
+		"punic/punic": "3.4.0",
+		"ramsey/uuid": "^3.8",
 
 		"bower-asset/jquery": "~1.8",
 		"bower-asset/moment": "2.10.*",
@@ -69,7 +71,6 @@
 		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
 		"bower-asset/highcharts": "^4.2",
 		"bower-asset/font-awesome": "^4",
-		"ramsey/uuid": "^3.8",
 		"bower-asset/bootstrap-select": "^1.13"
 	},
 	"suggest": {
