--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 		"jschaedl/iban": "^1.3",
 		"ext-imap": "*",
 		"phpdocumentor/reflection-docblock": "^3.0",
-		"phpoffice/phpspreadsheet": "~1.4",
+		"phpoffice/phpspreadsheet": "1.8.2",
 		"phpseclib/phpseclib": "^2.0",
 		"ddeboer/imap": "^0.5.2",
 		"punic/punic": "3.4.0",
