--- a/composer.json
+++ b/composer.json
@@ -14,54 +14,55 @@
 	"require": {
 		"ext-soap": "*",
 
-		"tigron/skeleton-database": "^0.2.3",
-		"tigron/skeleton-object": "^0.2.4",
-		"tigron/skeleton-file": "0.4.1",
-		"tigron/skeleton-file-picture": "0.2.11",
-		"tigron/skeleton-file-pdf": "^0.2.4",
-		"tigron/skeleton-i18n": "^2.1.0",
-		"tigron/skeleton-pager": "^0.1.24",
-		"tigron/skeleton-template-twig": "^2.0.1",
-		"tigron/skeleton-core": "^1.0.9",
-		"tigron/skeleton-error": "^0.1.4",
-		"tigron/skeleton-template": "~0.1.3",
-		"tigron/skeleton-email": "^0.2.8",
-		"tigron/skeleton-console": "^2.0.1",
-		"tigron/skeleton-migrate": "^0.1.12",
-		"tigron/skeleton-package-api": "^0.1.1",
-		"tigron/skeleton-package-crud": "^0.1.3",
-		"tigron/skeleton-transaction": "0.5.*",
-		"tigron/skeleton-package-openapi": "dev-master",
+		"tigron/skeleton-database": "~0",
+		"tigron/skeleton-object": "~0",
+		"tigron/skeleton-file": "^0",
+		"tigron/skeleton-file-picture": "~0",
+		"tigron/skeleton-file-pdf": "~0",
+		"tigron/skeleton-i18n": "~1",
+		"tigron/skeleton-pager": "^0",
+		"tigron/skeleton-template-twig": "~0",
+		"tigron/skeleton-core": "^1",
+		"tigron/skeleton-error": "~0",
+		"tigron/skeleton-template": "~0",
+		"tigron/skeleton-email": "~0",
+		"tigron/skeleton-console": "~0",
+		"tigron/skeleton-migrate": "~0",
+		"tigron/skeleton-package-api": "~0",
+		"tigron/skeleton-package-crud": "~0",
+		"tigron/click-post": "~0",
+		"tigron/skeleton-transaction": "^0.3",
 		"tigron/codabox-gateway": "^0.0.1",
 		"tigron/sepa-payments": "0.0.5",
-		"tigron/click-post": "^0.0.3",
+		"tigron/skeleton-package-openapi": "dev-master",
 
-		"fxp/composer-asset-plugin": "^1.4.6",
-		"swiftmailer/swiftmailer": "6.2.3",
-		"dompdf/dompdf": "^0.8.5",
-		"filp/whoops": "^2.7.1",
-		"codelicious/php-coda-parser": "^1.1",
+		"fxp/composer-asset-plugin": "~1.0",
+		"swiftmailer/swiftmailer": "5.*",
+		"dompdf/dompdf": "dev-master",
+		"filp/whoops": "^2.1",
+		"codelicious/php-coda-parser": "^2.2",
 		"jschaedl/iban": "^1.3",
 		"ext-imap": "*",
-		"phpdocumentor/reflection-docblock": "^5.1.0",
-		"phpoffice/phpspreadsheet": "^1.12.0",
+		"phpdocumentor/reflection-docblock": "^3.0",
+		"phpoffice/phpspreadsheet": "1.8.2",
 		"phpseclib/phpseclib": "^2.0",
-		"ddeboer/imap": "^1.10",
-		"punic/punic": "^3.5.1",
-		"ramsey/uuid": "^4.0.1",
+		"ddeboer/imap": "^0.5.2",
+		"punic/punic": "3.4.0",
+		"ramsey/uuid": "^3.8",
 
+		"bower-asset/jquery": "~1.8",
 		"bower-asset/moment": "2.10.*",
 		"bower-asset/tigron-datetimepicker": "0.*",
 		"bower-asset/eonasdan-bootstrap-datetimepicker": "dev-master",
-		"bower-asset/tigron-confirm-modal": "^0.0.3",
+		"bower-asset/tigron-confirm-modal": "0.*",
 		"bower-asset/dropzone": "~4.0",
-		"bower-asset/autosize": "^4.0",
+		"bower-asset/autogrow-textarea": "dev-master",
 		"bower-asset/jquery-zoom": "dev-master",
-		"bower-asset/handlebars": "^4.7",
+		"bower-asset/handlebars": "4.0.2",
 		"bower-asset/bootstrap-multiselect": "dev-master",
 		"bower-asset/jquery-ui": "*",
 		"bower-asset/bootstrap-checkbox": "*",
-		"bower-asset/bootstrap": "^3.4",
+		"bower-asset/bootstrap": "3.3.5",
 		"bower-asset/jquery-mask-plugin": "@stable",
 		"bower-asset/codemirror": "@stable",
 		"bower-asset/urijs": "@stable",
@@ -69,14 +70,8 @@
 		"bower-asset/typeahead.js": "^0.11.1",
 		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
 		"bower-asset/highcharts": "^4.2",
-		"bower-asset/font-awesome": "^4.7",
-		"bower-asset/bootstrap-select": "^1.13",
-		"npm-asset/jquery": "^2.2",
-		"npm-asset/jsqr": "^1.3",
-		"endroid/qr-code": "^3.8",
-		"bower-asset/platform": "^1.3",
-		"bower-asset/moe-font-sourcesanspro": "^1.3",
-		"npm-asset/webcam-easy": "^1.0"
+		"bower-asset/font-awesome": "^4",
+		"bower-asset/bootstrap-select": "^1.13"
 	},
 	"suggest": {
 		"ext-imap": "*"
