--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,6 @@
 		"dompdf/dompdf": "^0.8.5",
 		"filp/whoops": "^2.7.1",
 		"codelicious/php-coda-parser": "^2.1",
-		"jschaedl/iban": "^1.3",
 		"ext-imap": "*",
 		"phpdocumentor/reflection-docblock": "^5.1.0",
 		"phpoffice/phpspreadsheet": "^1.12.0",
@@ -76,7 +75,8 @@
 		"endroid/qr-code": "^3.8",
 		"bower-asset/platform": "^1.3",
 		"bower-asset/moe-font-sourcesanspro": "^1.3",
-		"npm-asset/webcam-easy": "^1.0"
+		"npm-asset/webcam-easy": "^1.0",
+		"jschaedl/iban-validation": "^1.7"
 	},
 	"suggest": {
 		"ext-imap": "*"
