ignore enviroment config

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-config/Config.php
+config/environment.php
 tmp/twig/*
 tmp/log/*
 tmp/languages/*
 tmp/picture/*
 tmp/dompdf/*
 store/file/*
-store/documentation/*
 lib/external/*
 lib/component/*
 util/tmp/*
