--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 			"url": "https://asset-packagist.org"
 		}
 	],
+	"minimum-stability": "RC",
 	"name": "tigron/skeleton",
 	"description": "Tigron Skeleton",
 	"type": "project",
@@ -61,32 +62,30 @@
 		"ramsey/uuid": "^4.0.1",
 
 		"bower-asset/moment": "2.10.*",
-		"bower-asset/tigron-datetimepicker": "0.*",
 		"bower-asset/tigron-confirm-modal": "^0.0.3",
 		"bower-asset/dropzone": "~4.0",
 		"bower-asset/autosize": "^4.0",
 		"bower-asset/jquery-zoom": "dev-master",
 		"bower-asset/handlebars": "^4.7",
-		"bower-asset/bootstrap-multiselect": "^0.9.15",
 		"bower-asset/jquery-ui": "*",
-		"bower-asset/bootstrap-checkbox": "*",
-		"bower-asset/bootstrap": "^3.4",
+		"bower-asset/bootstrap": "^5.2",
 		"bower-asset/jquery-mask-plugin": "@stable",
 		"bower-asset/codemirror": "@stable",
 		"bower-asset/urijs": "@stable",
 		"bower-asset/bloodhound": "^1.0",
-		"bower-asset/typeahead.js": "^0.11.1",
-		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
 		"bower-asset/highcharts": "^4.2",
 		"bower-asset/font-awesome": "^4.7",
 		"bower-asset/bootstrap-select": "^1.13",
-		"npm-asset/jquery": "^2.2",
 		"npm-asset/jsqr": "^1.3",
 		"endroid/qr-code": "^3.8",
 		"bower-asset/platform": "^1.3",
-		"bower-asset/moe-font-sourcesanspro": "^1.3",
 		"npm-asset/webcam-easy": "^1.0",
-		"jschaedl/iban-validation": "^1.7"
+		"jschaedl/iban-validation": "^1.7",
+		"npm-asset/feather-icons": "^4.29",
+		"npm-asset/flatpickr": "^4.6",
+		"npm-asset/jquery": "^3.6",
+		"npm-asset/select2": "4.1.0-rc.0",
+		"npm-asset/select2-bootstrap-5-theme": "^1.3"
 	},
 	"suggest": {
 		"ext-imap": "*"
