--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
 		"bower-asset/bootstrap-checkbox": "*",
 		"bower-asset/bootstrap": "^3.4",
 		"bower-asset/jquery-mask-plugin": "@stable",
-		"bower-asset/codemirror": "@stable",
+		"bower-asset/codemirror": "5.59.2",
 		"bower-asset/urijs": "@stable",
 		"bower-asset/bloodhound": "^1.0",
 		"bower-asset/typeahead.js": "^0.11.1",
