--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,7 @@
 		"endroid/qr-code": "^3.8",
 		"bower-asset/platform": "^1.3",
 		"bower-asset/moe-font-sourcesanspro": "^1.3",
-		"npm-asset/webcam-easy": "^1.0",
+		"npm-asset/webcam-easy": "1.0.5",
 		"jschaedl/iban-validation": "^1.7",
 		"cocur/slugify": "^4.2"
 	},
