--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
 		"tigron/skeleton-database": "0.*",
 		"tigron/skeleton-email": "0.*",
 		"tigron/skeleton-error": "0.*",
+		"tigron/skeleton-file": "2.*",
 		"tigron/skeleton-file-pdf": "0.*",
 		"tigron/skeleton-file-picture": "0.*",
-		"tigron/skeleton-file": "2.*",
 		"tigron/skeleton-i18n": "4.*",
 		"tigron/skeleton-migrate": "0.*",
 		"tigron/skeleton-object": "1.*",
@@ -44,51 +44,53 @@
 		"tigron/skeleton-package-crud": "3.*",
 		"tigron/skeleton-package-openapi": "dev-master",
 		"tigron/skeleton-pager": "3.*",
-		"tigron/skeleton-template-twig": "2.*",
 		"tigron/skeleton-template": "0.*",
+		"tigron/skeleton-template-twig": "2.*",
 		"tigron/skeleton-transaction": "4.*",
 
-		"oomphinc/composer-installers-extender": "^2.0",
-		"swiftmailer/swiftmailer": "6.3.*",
-		"dompdf/dompdf": "^2.0.0",
-		"filp/whoops": "^2.7.1",
+		"cocur/slugify": "^4.2",
 		"codelicious/php-coda-parser": "^2.1",
+		"ddeboer/imap": "^1.10",
+		"dompdf/dompdf": "^2.0.0",
+		"endroid/qr-code": "^3.8",
 		"ext-imap": "*",
+		"filp/whoops": "^2.7.1",
+		"jschaedl/iban-validation": "^1.7",
+		"oomphinc/composer-installers-extender": "^2.0",
 		"phpdocumentor/reflection-docblock": "^5.1.0",
 		"phpoffice/phpspreadsheet": "^1.12.0",
 		"phpseclib/phpseclib": "^2.0",
-		"ddeboer/imap": "^1.10",
 		"punic/punic": "^3.5.1",
 		"ramsey/uuid": "^4.0.1",
+		"sentry/sdk": "^4.0",
+		"sentry/sentry": "^4.0",
+		"swiftmailer/swiftmailer": "6.3.*",
 
-		"bower-asset/moment": "2.10.*",
-		"bower-asset/tigron-datetimepicker": "0.*",
-		"bower-asset/tigron-confirm-modal": "^0.0.3",
-		"bower-asset/dropzone": "~4.0",
 		"bower-asset/autosize": "^4.0",
-		"bower-asset/jquery-zoom": "dev-master",
-		"bower-asset/handlebars": "^4.7",
-		"bower-asset/bootstrap-multiselect": "^0.9.15",
-		"bower-asset/jquery-ui": "*",
-		"bower-asset/bootstrap-checkbox": "*",
-		"bower-asset/bootstrap": "^3.4",
-		"bower-asset/jquery-mask-plugin": "@stable",
-		"bower-asset/codemirror": "5.59.2",
-		"bower-asset/urijs": "@stable",
 		"bower-asset/bloodhound": "^1.0",
+		"bower-asset/bootstrap": "^3.4",
+		"bower-asset/bootstrap-checkbox": "*",
+		"bower-asset/bootstrap-multiselect": "^0.9.15",
+		"bower-asset/bootstrap-select": "^1.13",
+		"bower-asset/codemirror": "5.59.2",
+		"bower-asset/dropzone": "~4.0",
+		"bower-asset/font-awesome": "^4.7",
+		"bower-asset/handlebars": "^4.7",
+		"bower-asset/highcharts": "^4.2",
+		"bower-asset/jquery-mask-plugin": "@stable",
+		"bower-asset/jquery-ui": "*",
+		"bower-asset/jquery-zoom": "dev-master",
+		"bower-asset/moe-font-sourcesanspro": "^1.3",
+		"bower-asset/moment": "2.10.*",
+		"bower-asset/platform": "^1.3",
+		"bower-asset/tigron-confirm-modal": "^0.0.3",
+		"bower-asset/tigron-datetimepicker": "0.*",
 		"bower-asset/typeahead.js": "^0.11.1",
 		"bower-asset/typeahead.js-bootstrap-css": "^1.2",
-		"bower-asset/highcharts": "^4.2",
-		"bower-asset/font-awesome": "^4.7",
-		"bower-asset/bootstrap-select": "^1.13",
+		"bower-asset/urijs": "@stable",
 		"npm-asset/jquery": "^2.2",
 		"npm-asset/jsqr": "^1.3",
-		"endroid/qr-code": "^3.8",
-		"bower-asset/platform": "^1.3",
-		"bower-asset/moe-font-sourcesanspro": "^1.3",
-		"npm-asset/webcam-easy": "1.0.5",
-		"jschaedl/iban-validation": "^1.7",
-		"cocur/slugify": "^4.2"
+		"npm-asset/webcam-easy": "1.0.5"
 	},
 	"suggest": {
 		"ext-imap": "*"
